--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 								<li><a href="index.html">home</a></li>
 								
 								<li><a href="about.html">about</a></li>
-								
+								<li><a href="index.html">post</a>
 									<ul>
 										<li><a href="#"></a></li>
 										<li><a href="#"></a></li>
