--- a/contact.html
+++ b/contact.html
@@ -119,7 +119,7 @@
 				</div>
 			</div>
 			<div class="footer-bottom">
-				<p>&copy; BZIT | All Rights Reserved</p>
+				<p>@Punurban Mallick || This My Project </p>>
 			</div>
 		</div>
 	</footer>
